--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,10 @@
 [build.environment]
   NODE_VERSION = "20"
+[build]
+  command = "npm run build"
+  publish = "dist"  # or "build" for CRA
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
