--- a/package.json
+++ b/package.json
@@ -1,42 +1,29 @@
 {
   "name": "mtech-backend",
   "version": "1.0.0",
-  "description": "Full-stack electronics e-commerce store backend API for MTech - Maurya Enterprises",
+  "description": "MTech Electronics Store API by Maurya Enterprises",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "jest"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["electronics", "ecommerce", "arduino", "raspberry-pi", "api", "mtech"],
+  "keywords": ["electronics", "api", "mtech", "maurya-enterprises"],
   "author": "Maurya Enterprises",
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
+    "sqlite3": "^5.1.6",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.0",
-    "sqlite3": "^5.1.6",
     "helmet": "^6.1.5",
-    "express-rate-limit": "^6.7.0",
-    "validator": "^13.9.0",
-    "multer": "^1.4.4",
-    "sharp": "^0.32.1",
-    "nodemailer": "^6.9.1",
-    "dotenv": "^16.0.3"
+    "express-rate-limit": "^6.7.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22",
-    "jest": "^29.5.0",
-    "supertest": "^6.3.3"
+    "nodemon": "^2.0.22"
   },
   "engines": {
     "node": ">=14.0.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/maurya-enterprises/mtech.git"
-  },
-  "homepage": "https://mtech.com",
-  "copyright": "© 2025 Maurya Enterprises. All rights reserved."
+  }
 }
