Update and rename env.txt to .env

--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
-NODE_ENV=development
+NODE_ENV=production
 PORT=3000
 JWT_SECRET=mtech-secret-maurya-enterprises-2025
 DB_PATH=./mtech_store.db
-FRONTEND_URL=http://localhost:3001
+FRONTEND_URL=https://maurya.enterprises
 COMPANY_NAME=MTech
 COMPANY_FULL_NAME=Maurya Enterprises
+CORS_ORIGINS=https://maurya.enterprises,http://localhost:3001
